(+ user visible changes, * internal stuff)

Changes since PyInstaller 1.3
-----------------------------
 + Add import hooks for PyQt4 (thanks to Pascal Veret)
 + Add import hooks for pyodbc (thanks to Don Dwiggins)
 + Add import hooks for cElementTree
 + Add import hooks per SQLAlchemy (thanks to Greg Copeland)
 + Improve import hooks for PyGTK (thanks to Marco Bonifazi and foxx).
 + Add fix for the very annoying "MSVCRT71 could not be extracted" bug,
   which was caused by the DLL being packaged twice (thanks to Idris
   Aykun).
 * Removed C++-style comments from the bootloader for compatibility
   with the AIX compiler.
 + Fix support for .py files with DOS line endings under Linux (fixes
   PyOpenGL).
 + Fix support for PIL when imported without top-level package ("import 
   Image").
 + Fix PyXML import hook under NT (thanks to Lorenzo Mancini)
 * Improve correctness of the binary cache of UPX'd/strip'd files. This
   fixes problems when switching between multiple versions of the
   same third-party library (like e.g. wxPython allows to do). 


PyInstaller 1.3
---------------
 + Fix bug with user-provided icons disappearing from built executables
   when these were compressed with UPX.
 + Fix problems with packaging of applications using PIL (that was broken
   because of a bug in Python's import machinery, in recent Python
   versions). Also add a workaround including Tcl/Tk with PIL unless
   ImageTk is imported.
 + (Windows) When used under Windows XP, packaged programs now have
   the correct look & feel and follow user's themes (thanks to the manifest
   file being linked within the generated executable). This is especially
   useful for applications using wxPython.
 + Fix a buffer overrun in the bootloader (which could lead to a crash)
   when the built executable is run from within a deep directory (more than
   70-80 characters in the pathname).
 * Bootstrap modules are now compressed in the executable (so that they