@@ -2,6 +2,8 @@
 
 Changes since PyInstaller 1.3
 -----------------------------
+ + Add support for new absolute imports in Python 2.5 (thanks to Arve
+   Knudsen).
  + Add import hooks for PyQt4 (thanks to Pascal Veret)
  + Add import hooks for pyodbc (thanks to Don Dwiggins)
  + Add import hooks for cElementTree
